--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "natours",
+  "name": "practicebe",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/server.js"
   },
   "author": "Asif Shaikh",
   "license": "ISC",
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
