sign up and log in

--- a/config.env
+++ b/config.env
@@ -1,3 +1,6 @@
 NODE_ENV=development
-PORT=8000
+PORT=9000
 D_LOCAL=mongodb://localhost:27017/practiceBackEnd
+
+JWT_SECRET = ye-mera-ek-secret-key-this-is-secret-key
+JWT_EXPIRES_IN = 90d
