--- a/config.env
+++ b/config.env
@@ -4,3 +4,9 @@ D_LOCAL=mongodb://localhost:27017/practiceBackEnd
 
 JWT_SECRET = ye-mera-ek-secret-key-this-is-secret-key
 JWT_EXPIRES_IN = 90d
+
+EMAIL_USERNAME=d3bddffa72d032
+EMAIL_PASS=3d5dae50a4bc50
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
+
